--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,50 +1,27 @@
-<!DOCTYPE html> <!-- Используется html 5 версии -->
-<html lang="ru"> <!-- Язык сайта - русский -->
+<!DOCTYPE html>
+<html lang="ru">
   <head>
     {% load static %}    
-    <meta charset="utf-8"> <!-- Кодировка сайта -->
-    <!-- Сайт готов работать с мобильными устройствами -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Загружаем фав-иконки -->
-    <link rel="icon" href="img/fav/fav.ico" type="image">
+    <link rel="icon" href="{% static 'img/fav/fav.ico' %}" type="image">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/fav/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
-    <!-- Подключен файл со стандартными стилями бустрап -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>Последние обновления на сайте</title>
+    <title>{% block title %}Последние обновления на сайте{% endblock %}</title>
   </head>
   <body>
     <header>
       {% include 'includes/header.html' %}
     </header>
     <main> 
-      <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">     
-        {% for post in posts %}
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }}
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>
-        <p>{{ post.text }}</p>    
-        <a href="">все записи группы</a>
-        {% if not forloop.last %}<hr>{% endif %}
-      {% endfor %} 
-          <a href="group_list.html">все записи группы</a>
-        </article>
-        <!-- под последним постом нет линии -->
+        {% block content %}{% endblock %}
       </div>  
     </main>
-    <!-- Использованы классы бустрапа: -->
-    <!-- border-top: создаёт тонкую линию сверху блока -->
-    <!-- text-center: выравнивает текстовые блоки внутри блока по центру -->
-    <!-- py-3: контент внутри размещается с отступом сверху и снизу -->         
     <footer class="border-top text-center py-3">
       {% include 'includes/footer.html' %}
     </footer>
