--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}{{ 'yatube' }}{% endblock %}
 
 {% block content %}
-       <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">     
         <h1>Последние обновления на сайте</h1>
         <article>
@@ -23,6 +22,5 @@
           {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
         </article>
-        <!-- под последним постом нет линии -->
       </div>
 {% endblock %}
