--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,28 +1,28 @@
 {% extends "base.html" %}
 
-{% block title %}{{ 'yatube' }}{% endblock %}
+{% block title %}{{ group.title }}.{% endblock %}
 
 {% block content %}
   <div class="container py-5">
     <h1> Записи сообщества {{ group.title }} </h1>
-      <p>
-       {{ group.description }}
-      </p>
-        <article>
-          {% for post in posts %}
-          <ul>
-            <li>
-            Автор: {{ post.author.get_full_name }}
-            </li>
-              <li>
-               Дата публикации: {{ post.pub_date|date:"d E Y" }}
-              </li>
-            </ul>      
-          <p>
-          {{ post.text }}
-          </p>
-          {% if not forloop.last %}<hr>{% endif %}
-          {% endfor %}
-        </article>
+    <p>
+     {{ group.description }}
+    </p>
+    <article>
+      {% for post in posts %}
+      <ul>
+        <li>
+          Автор: {{ post.author.get_full_name }}
+        </li>
+        <li>
+           Дата публикации: {{ post.pub_date|date:"d E Y" }}
+        </li>
+      </ul>      
+    <p>
+    {{ post.text }}
+    </p>
+    {% if not forloop.last %}<hr>{% endif %}
+    {% endfor %}
+    </article>
   </div>
 {% endblock %}
