--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,29 +1,28 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ 'yatube' }}{% endblock %}
+{% block title %}yatube{% endblock %}
 
 {% block content %}
 <div class="container py-5">
-  <h1>{{ main_page }}</h1> 
-  <h2>Последние обновления на сайте</h2>
-  <article>
-    {% for post in posts %}
+  <h1>Последние обновления на сайте</h1> 
+    <article>
+      {% for post in posts %}
       <ul>
         <li>
           Автор: {{ post.author.get_full_name }}
         </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      <p>{{ post.text }}</p>  
-      {% if post.group %}   
-        <a href="{% url 'posts:group_posts' post.group.slug %}">
-          все записи группы
-        </a>
-      {% endif %}
-      {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %}
-  </article>
-      </div>
+          <li>
+            Дата публикации: {{ post.pub_date|date:"d E Y" }}
+          </li>
+        </ul>
+        <p>{{ post.text }}</p>  
+        {% if post.group %}   
+          <a href="{% url 'posts:group_posts' post.group.slug %}">
+            все записи группы
+          </a>
+        {% endif %}
+        {% if not forloop.last %}<hr>{% endif %}
+      {% endfor %}
+    </article>
+</div>
 {% endblock %}
